update e2e tests to work on browserstack

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -64,7 +64,7 @@
                       </mat-list>
     
                       <div fxLayout="row" fxLayoutAlign="end">
-                        <button mat-raised-button style="color: black; background-color: white;" (click)="logout()">
+                        <button class="signout-button" mat-raised-button style="color: black; background-color: white;" (click)="logout()">
                           Sign Out
                         </button>
                       </div>
