add services select, minor updates

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -58,7 +58,7 @@
                           <p mat-line>{{ userInfo?.firstName + ' ' + userInfo?.lastName }}</p>
                         </mat-list-item>
                         <mat-list-item>
-                          <mat-icon mat-list-icon>note</mat-icon>
+                          <mat-icon mat-list-icon>email</mat-icon>
                           <p mat-line>{{ userInfo?.email }}</p>
                         </mat-list-item>
                       </mat-list>
