--- a/src/app/modules/cer-services/cer-services.component.html
+++ b/src/app/modules/cer-services/cer-services.component.html
@@ -1,3 +1,13 @@
 <div class="cer-services-content">
+
+  <mat-form-field appearance="fill" *ngIf="isServiceBaseRoute()">
+    <mat-label>Service</mat-label>
+    <mat-select>
+      <mat-option *ngFor="let service of services" [value]="service.value" [routerLink]="service.link">
+        {{service.viewValue}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
   <router-outlet></router-outlet>
 </div>
