tidying up, minor fixes to spinners etc

--- a/src/app/modules/cer-services/dropbox/dropbox-details/dropbox-details.component.html
+++ b/src/app/modules/cer-services/dropbox/dropbox-details/dropbox-details.component.html
@@ -18,6 +18,8 @@
         <h4>{{dropbox.name}}</h4>
         <h3>Team Folder Id:</h3>
         <h4>{{dropbox.team_folder_id_dbx}}</h4>
+        <h3>CeR Id:</h3>
+        <h4>{{dropbox.id}}</h4>
       </mat-card-content>
     </mat-card>
 
