--- a/src/app/modules/cer-services/nectar/nectar-details/nectar-details.component.html
+++ b/src/app/modules/cer-services/nectar/nectar-details/nectar-details.component.html
@@ -18,6 +18,8 @@
         <h4>{{nectar.name}}</h4>
         <h3>Created Date:</h3>
         <h4>{{nectar.date | date}}</h4>
+        <h3>CeR Id:</h3>
+        <p>{{nectar.id}}</p>
       </mat-card-content>
     </mat-card>
 
