--- a/src/app/modules/cer-services/research-storage/research-storage-details/research-storage-details.component.html
+++ b/src/app/modules/cer-services/research-storage/research-storage-details/research-storage-details.component.html
@@ -35,6 +35,9 @@
               <mat-divider></mat-divider>
               <h3>Number of Files</h3>
               <p>{{researchStorage.num_files}}</p>
+              <mat-divider></mat-divider>
+              <h3>CeR Id:</h3>
+              <p>{{researchStorage.id}}</p>
             </ng-template>
           </mat-tab>
 
