--- a/src/app/modules/cer-services/research-vm/research-vm-details/research-vm-details.component.html
+++ b/src/app/modules/cer-services/research-vm/research-vm-details/research-vm-details.component.html
@@ -41,6 +41,9 @@
               <mat-divider></mat-divider>
               <h3>State</h3>
               <p>{{researchVm.state}}</p>
+              <mat-divider></mat-divider>
+              <h3>CeR Id:</h3>
+              <p>{{researchVm.id}}</p>
             </ng-template>
           </mat-tab>
 
