--- a/src/app/modules/cer-projects/project-details/project-details.component.html
+++ b/src/app/modules/cer-projects/project-details/project-details.component.html
@@ -25,7 +25,7 @@
       <mat-card-content>
         <mat-tab-group dynamicHeight animationDuration="0ms">
           <mat-tab label="Project Details">
-            <ng-template matTabContent>
+            <ng-template matTabContent>              
               <h3>Project Title</h3>
               <p>{{project.title}}</p>
               <mat-divider></mat-divider>
@@ -37,6 +37,9 @@
               <mat-divider></mat-divider>
               <h3>Project Status</h3>
               <p>{{project.status.name}}</p>
+              <mat-divider></mat-divider>
+              <h3>CeR Id</h3>
+              <p>{{project.id}}</p>
             </ng-template>
           </mat-tab>
 
