--- a/src/app/modules/cer-services/visualisation/visualisation-details/visualisation-details.component.html
+++ b/src/app/modules/cer-services/visualisation/visualisation-details/visualisation-details.component.html
@@ -22,6 +22,8 @@
         <h4 *ngIf="visualisation.video_based_vis === 1">Video</h4>
         <h4 *ngIf="visualisation.vive === 1">Vive</h4>
         <h4 *ngIf="visualisation.web_based_vis === 1">Web</h4>
+        <h3>CeR Id:</h3>
+        <p>{{visualisation.id}}</p>
       </mat-card-content>
     </mat-card>
 
