--- a/src/app/shared/group-member-list/group-member-list.component.html
+++ b/src/app/shared/group-member-list/group-member-list.component.html
@@ -2,8 +2,8 @@
   <div *ngIf="(loading$ | async)">
     <mat-spinner diameter="40"></mat-spinner>
   </div>
-  <div *ngIf="(error$ | async) as error">{{error.message}}</div>
-  <mat-list role="list" *ngIf="(groupMembers$ | async) as groupMembers">
+  <div *ngIf="error">{{error.message}}</div>
+  <mat-list role="list" *ngIf="groupMembers">
     <div *ngFor="let group of groupMembers">
       <mat-list-item *ngFor="let member of group.users" role="listitem">
       <!-- <img matListAvatar class="avatar-image" src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="avatar"> TODO Use person icon-->
