--- a/src/app/modules/cer-services/request-vm/request-vm.component.html
+++ b/src/app/modules/cer-services/request-vm/request-vm.component.html
@@ -74,7 +74,7 @@
           <p>We will contact you to confirm the time and arrange the location.</p>
           <p>
             You may view your request here:
-            <a *ngIf="response" [href]="response.ticketUrl" target="_blank">{{response.ticketNumber}}</a>
+            <a *ngIf="response" [attr.href]="ticketUrl + response.sys_id" target="_blank">{{response.display_value}}</a>
           </p>
         </div>
       </div>
