--- a/src/app/modules/cer-services/research-storage/research-storage-details/research-storage-details.component.html
+++ b/src/app/modules/cer-services/research-storage/research-storage-details/research-storage-details.component.html
@@ -14,10 +14,9 @@
 
     <mat-card *ngIf="researchStorage && !(loading$ | async)">
       <mat-card-content>
-        <mat-tab-group dynamicHeight animationDuration="0ms">
-
+        <mat-tab-group dynamicHeight>
           <mat-tab label="Drive Specifications">
-            <ng-template matTabContent>
+            <div class="tab-content">
               <h3>Created Date</h3>
               <p>{{researchStorage.date | date}}</p>
               <mat-divider></mat-divider>
@@ -38,28 +37,14 @@
               <mat-divider></mat-divider>
               <h3>CeR Id:</h3>
               <p>{{researchStorage.id}}</p>
-            </ng-template>
+            </div>
           </mat-tab>
 
           <mat-tab label="Members">
-            <ng-template matTabContent>
-              
-              <!-- <app-group-member-list [groupLabel]="memberTypes.Admin" [groupId]="researchStorage.groups.adm_group.replace('.eresearch', '')">
-              </app-group-member-list>
-
-              <app-group-member-list [groupLabel]="memberTypes.ReadWrite" [groupId]="researchStorage.groups.rw_group.replace('.eresearch', '')">
-              </app-group-member-list>
-
-              <app-group-member-list [groupLabel]="memberTypes.ReadOnly" [groupId]="researchStorage.groups.ro_group.replace('.eresearch', '')">
-              </app-group-member-list>
-
-              <app-group-member-list [groupLabel]="memberTypes.T" [groupId]="researchStorage.groups.t_group.replace('.eresearch', '')">
-              </app-group-member-list> -->
-
+            <div class="tab-content">
               <app-group-member-list [groupLabels]="memberTypes" [groups]="researchStorage.groups">
               </app-group-member-list>
-
-            </ng-template>
+            </div>
           </mat-tab>
 
         </mat-tab-group>
