--- a/src/app/modules/cer-services/dropbox/dropbox-details/dropbox-details.component.html
+++ b/src/app/modules/cer-services/dropbox/dropbox-details/dropbox-details.component.html
@@ -14,12 +14,27 @@
 
     <mat-card *ngIf="dropbox && !(loading$ | async)">
       <mat-card-content>
-        <h3>Name:</h3>
-        <h4>{{dropbox.name}}</h4>
-        <h3>Team Folder Id:</h3>
-        <h4>{{dropbox.team_folder_id_dbx}}</h4>
-        <h3>CeR Id:</h3>
-        <h4>{{dropbox.id}}</h4>
+
+        <mat-tab-group dynamicHeight>
+          <mat-tab label="Dropbox Specifications">
+            <div class="tab-content">
+              <h3>Name:</h3>
+              <h4>{{dropbox.name}}</h4>
+              <h3>Team Folder Id:</h3>
+              <h4>{{dropbox.team_folder_id_dbx}}</h4>
+              <h3>CeR Id:</h3>
+              <h4>{{dropbox.id}}</h4>
+            </div>
+          </mat-tab>
+
+          <mat-tab label="Members">
+            <div class="tab-content">
+              <app-group-member-list [groupLabels]="memberTypes" [groups]="dropbox.groups">
+              </app-group-member-list>
+            </div>
+          </mat-tab>
+
+        </mat-tab-group>
       </mat-card-content>
     </mat-card>
 
@@ -29,6 +44,7 @@
           <h3>Projects:</h3>
           <mat-divider></mat-divider>
           <mat-card-content>
+
             <mat-list role="list" *ngIf="dropbox.projects.length > 0; else noProjects">
               <mat-list-item *ngFor="let project of dropbox.projects" role="listitem">
                 <h3 matLine class="project-title">{{project.project.title}}</h3>
