--- a/src/app/modules/my-projects/my-projects-list/my-projects-list.component.html
+++ b/src/app/modules/my-projects/my-projects-list/my-projects-list.component.html
@@ -6,9 +6,7 @@
     </mat-card-header>
     <mat-card-content>
       <div class="project-members">
-        <mat-chip-list aria-label="Project Members">
-          <mat-chip *ngFor="let member of project.project.members" matTooltip="{{member.role.name}}">{{member.person.full_name}}</mat-chip>
-        </mat-chip-list>
+        <app-project-member-list [projectMembers]="project.project.members"></app-project-member-list>
       </div>
       <p class="project-description">
         {{project.project.description}}
