--- a/src/app/modules/my-projects/my-projects-list/my-projects-list.component.html
+++ b/src/app/modules/my-projects/my-projects-list/my-projects-list.component.html
@@ -6,7 +6,7 @@
     </mat-card-header>
     <mat-card-content>
       <div class="project-members">
-        <app-project-member-list [projectMembers]="project.project.members"></app-project-member-list>
+        <app-project-member-list [projectMembers]="project.project.members" [listFormat]="projectMembersListFormatOptions.Chips"></app-project-member-list>
       </div>
       <p class="project-description">
         {{project.project.description}}
