--- a/src/app/modules/cer-services/request-vm/request-vm.component.html
+++ b/src/app/modules/cer-services/request-vm/request-vm.component.html
@@ -74,13 +74,20 @@
           <p>We will contact you to confirm the time and arrange the location.</p>
           <p>
             You may view your request here:
-            <a *ngIf="response" [attr.href]="ticketUrl + response.sys_id" target="_blank">{{response.display_value}}</a>
+            <a *ngIf="response" [attr.href]="ticketUrl + response.sys_id" target="_blank">
+              {{response.display_value}}
+            </a>
           </p>
         </div>
       </div>
       <div fxLayout="column" fxLayoutAlign="end">
         <div fxLayout="row" fxLayoutAlign="end">
-          <button mat-raised-button color="accent" [routerLink]="['/content', 1]">Back to Research Virtual Machines</button>
+
+          <!-- Temporary modified for MVP1 -->
+          <!-- <button mat-raised-button color="accent" routerLink="/service/research-vm">Back to Research Virtual Machines</button> -->
+          <a href="https://research-hub.auckland.ac.nz/#/content/1"><button mat-raised-button color="accent">Back to Research Virtual Machines</button></a>
+          
+
         </div>
       </div>
     </mat-step>
