incorporate latest changes from existing Research Hub forms

--- a/src/app/modules/cer-services/request-storage/request-storage.component.scss
+++ b/src/app/modules/cer-services/request-storage/request-storage.component.scss
@@ -302,3 +302,8 @@ div .delete-icon-container {
   width: fit-content;
   display: inline-block;
 }
+
+.form___checkbox--indent {
+  margin-left: 2rem;
+  word-wrap: normal;
+}
