add research hub url to env vars

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -7,11 +7,11 @@
       </div>
 
       <div fxLayout="row" fxLayout.xs="column">
-        <a href="https://research-hub.auckland.ac.nz/#/feedback">Provide Feedback</a>
+        <a href="{{researchHubUrl}}#/feedback">Provide Feedback</a>
         <span fxHide.xs class="footer-divider">•</span>
-        <a href="https://research-hub.auckland.ac.nz/#/contact">Contact</a>
+        <a href="{{researchHubUrl}}#/contact">Contact</a>
         <span fxHide.xs class="footer-divider">•</span>
-        <a href="https://research-hub.auckland.ac.nz/#/about">About</a>
+        <a href="{{researchHubUrl}}#/about">About</a>
         <span fxHide.xs class="footer-divider">•</span>
         <a [href]="disclaimerUrl" target="_blank">Disclaimer</a>
       </div>
