--- a/src/app/modules/cer-services/request-vm/request-vm.component.html
+++ b/src/app/modules/cer-services/request-vm/request-vm.component.html
@@ -85,7 +85,7 @@
 
           <!-- Temporary modified for MVP1 -->
           <!-- <button mat-raised-button color="accent" routerLink="/service/research-vm">Back to Research Virtual Machines</button> -->
-          <a href="https://research-hub.auckland.ac.nz/#/content/1"><button mat-raised-button color="accent">Back to Research Virtual Machines</button></a>
+          <a href="{{researchHubUrl}}#/content/1"><button mat-raised-button color="accent">Back to Research Virtual Machines</button></a>
           
 
         </div>
