--- a/src/app/shared/page-not-found/page-not-found.component.html
+++ b/src/app/shared/page-not-found/page-not-found.component.html
@@ -1,6 +1,6 @@
 <div class="content">
   <h1>404 Not Found</h1>
   <p>The page you requested was not found.</p>
-  <p>Return <a href="https://research-hub.auckland.ac.nz/">home</a>.</p>
+  <p>Return <a href="{{researchHubUrl}}">home</a>.</p>
   <!-- <p>Return <a routerLink="/">home</a>.</p> -->
 </div>
