--- a/src/app/shared/return-to-hub/return-to-hub.component.html
+++ b/src/app/shared/return-to-hub/return-to-hub.component.html
@@ -1,8 +1,8 @@
 <div class="content">
-  <a href="https://research-hub.auckland.ac.nz/">
+  <a href="{{researchHubUrl}}">
     <button mat-button color="primary">
       <mat-icon>home</mat-icon>
-      <span>Return Home</span>
+      <span>Return to the Research Hub</span>
     </button>
   </a>
 </div>
