--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -10,7 +10,7 @@
        <!-- <a routerLink="/" class="dashboard-logo" ngClass.xs="dashboard-logo-xs">
         <img src="https://via.placeholder.com/239x32">
       </a> -->
-      <a href="https://research-hub.auckland.ac.nz/" class="dashboard-logo" ngClass.xs="dashboard-logo-xs">
+      <a href="{{researchHubUrl}}" class="dashboard-logo" ngClass.xs="dashboard-logo-xs">
         <img src="assets/imgs/hub-logo.svg">
       </a>
     </mat-toolbar>
@@ -45,7 +45,7 @@
 
               <!-- Temporary modified for MVP1 -->
 
-              <a href="https://research-hub.auckland.ac.nz/" class="dashboard-logo" ngClass.xs="dashboard-logo-xs">
+              <a href="{{researchHubUrl}}" class="dashboard-logo" ngClass.xs="dashboard-logo-xs">
                 <img src="assets/imgs/hub-logo.svg">
               </a>
               <!-- <a routerLink="/" class="dashboard-logo" ngClass.xs="dashboard-logo-xs">
