--- a/src/app/modules/cer-services/request-storage/request-storage.component.html
+++ b/src/app/modules/cer-services/request-storage/request-storage.component.html
@@ -547,7 +547,7 @@
 
           <!-- Temporary modified for MVP1 -->
           <!-- <button mat-raised-button color="accent" routerLink="/service/research-storage">Back to Research Storage</button> -->
-          <a href="https://research-hub.auckland.ac.nz/#/content/49"><button mat-raised-button color="accent">Back to Research Storage</button></a>
+          <a href="{{researchHubUrl}}#/content/49"><button mat-raised-button color="accent">Back to Research Storage</button></a>
 
         </div>
       </div>
