add classes for tag manager

--- a/src/app/modules/cer-services/request-storage/request-storage.component.html
+++ b/src/app/modules/cer-services/request-storage/request-storage.component.html
@@ -513,7 +513,7 @@
 
         <div fxLayout="column" fxLayoutAlign="end">
           <div fxLayout="row" fxLayoutAlign="end">
-            <button mat-raised-button color="accent" (click)="
+            <button class="storage-request" mat-raised-button color="accent" (click)="
                 submit(requestTypeForm.controls.requestType.value, dataSizeForm)
               " [disabled]="submitting">
               Request Storage
