--- a/src/app/modules/cer-services/request-vm/request-vm.component.html
+++ b/src/app/modules/cer-services/request-vm/request-vm.component.html
@@ -56,7 +56,7 @@
 
         <div fxLayout="column" fxLayoutAlign="end">
           <div fxLayout="row" fxLayoutAlign="end">
-            <button mat-raised-button color="accent" (click)="submit()" [disabled]="submitting">Book Consultation</button>
+            <button class="vm-book-consultation" mat-raised-button color="accent" (click)="submit()" [disabled]="submitting">Book Consultation</button>
           </div>
         </div>
       </form>
