modify width of project abstract input box

--- a/src/app/modules/cer-services/request-storage/request-storage.component.html
+++ b/src/app/modules/cer-services/request-storage/request-storage.component.html
@@ -133,7 +133,7 @@
 
           <div class="form-group">
             <h3>Brief abstract or summary of the research for this storage</h3>
-            <mat-form-field class="no-floating-label input-full-width" floatLabel="never">
+            <mat-form-field class="no-floating-label input-full-width project-abstract-form" floatLabel="never">
               <textarea matInput placeholder="Project abstract" formControlName="abstract" type="text"></textarea>
               <mat-error *ngIf="projectForm.controls.abstract.hasError('required')">* Please enter an abstract
               </mat-error>
