--- a/src/app/modules/cer-services/request-storage/request-storage.component.scss
+++ b/src/app/modules/cer-services/request-storage/request-storage.component.scss
@@ -44,10 +44,10 @@
   }
 }
 
-
-
-
-
+.project-abstract-form {
+  width: 100%;
+  max-width: 1000px;
+}
 
 .step-form-container {
   position: relative;
