updated footer links

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -7,11 +7,11 @@
       </div>
 
       <div fxLayout="row" fxLayout.xs="column">
-        <a href="{{researchHubUrl}}#/feedback">Provide Feedback</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfp0vhGLykABFS8g4Ow_MlRioJKm1D9v27Zqh_BKFXs2RdAtw/viewform?usp=sf_link" target="_blank">Feedback</a>
         <span fxHide.xs class="footer-divider">•</span>
-        <a href="{{researchHubUrl}}#/contact">Contact</a>
+        <a href="https://www.eresearch.auckland.ac.nz/getting-in-touch/" target="_blank">Contact</a>
         <span fxHide.xs class="footer-divider">•</span>
-        <a href="{{researchHubUrl}}#/about">About</a>
+        <a href="https://www.eresearch.auckland.ac.nz/" target="_blank">About</a>
         <span fxHide.xs class="footer-divider">•</span>
         <a [href]="disclaimerUrl" target="_blank">Disclaimer</a>
       </div>
